feat: changed sorting in a column in TruckAddonsTableModel